# TrueTally

./: .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  infrastructure.md
api-rust/: .dockerignore  Cargo.toml  Dockerfile  info.md
api-rust/src/: db.rs  handlers.rs  lib.rs  main.rs  models.rs
blockchain-core/: .gitignore  Cargo.toml  Dockerfile  info.md
blockchain-core/data/: chain.json
blockchain-core/src/: block.rs  blockchain.rs  consensus.rs  lib.rs  main.rs  network.rs
frontend/: .dockerignore  .env.example  Dockerfile  Dockerfile.dev  info.md  next.config.js  package-lock.json  package.json
frontend/public/: README.md  robots.txt
frontend/src/app/: layout.tsx  page.tsx  sitemap.ts
frontend/src/app/about/: layout.tsx  page.tsx
frontend/src/app/blocks/: layout.tsx  page.tsx
frontend/src/app/login/: layout.tsx  page.tsx
frontend/src/app/register/: layout.tsx  page.tsx
frontend/src/app/results/: page.tsx
frontend/src/app/robots.txt/: route.ts
frontend/src/components/: BlockExplorer.tsx  CandidateForm.tsx  ConnectionStatus.tsx  Dashboard.tsx  Navbar.tsx  Wallet.tsx  index.ts
frontend/src/hooks/: index.ts  useBlockchain.ts  useWallet.ts
frontend/src/lib/: api.ts  crypto.ts
