[package]
name = "api-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "postgres"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json"] }
thiserror = "1.0"
log = "0.4"
env_logger = "0.11"

[lib]
name = "api_gateway"
path = "src/lib.rs"

[[bin]]
name = "api-gateway"
path = "src/main.rs"

[dev-dependencies]
tokio-test = "0.4"