[package]
name = "blockchain-core"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand = "0.8"
serde_derive = "1.0"
log = "0.4"
env_logger = "0.11"
once_cell = "1.19"
axum = "0.7"

[lib]
name = "blockchain_core"
path = "src/lib.rs"

[[bin]]
name = "blockchain-node"
path = "src/main.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1